flags and difficulty select

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .text-outline {
+    text-shadow: 
+      -3px -3px 0 black, 
+      3px -3px 0 black, 
+      -3px 3px 0 black, 
+      3px 3px 0 black;
+  }
+}
